test/testSemantic/test_errores/badArray2.ctds
class badArray2{
	
	int main(){
		int a;
		int b;
		b=a[3]; //error
		externinvk("printf", int, b);

		return 1;
	}

}